Version 2.8.0:

* Introduced a clean separation between Parliament's software and data files.
  The software files may now be read-only to the account under which Parliament
  is running, and the data files are easily moved to a writable location
  suitable for mass storage, such as an alternate partition, network mount,
  NAS or SAN device.  All data files, including log files, are now stored under
  the directory given by the kbDirectoryPath setting in ParliamentKbConfig.txt
  (default is kb-data under the installation directory).

* Changed the startup scripts on Linux/UNIX to properly support systemd service
  installation.

* Changed the startup scripts on Windows to parallel the Linux/UNIX scripts,
  and converted them to PowerShell.

* Fixed an issue on UNIX/Linux platforms that prevented the Parliament daemon
  from receiving SIGTERM signals, making Parliament difficult to use in a
  Docker container.

* Added scripts to build Docker containers to be released alongside the
  standard Parliament releases.

* Made the bdbCacheSize configuration parameter in ParliamentKbConfig.txt
  global across all graphs. Previously, a cache of this size was dedicated to
  each named graph. With this change, a single cache of this size is shared by
  all graphs. This is particularly beneficial to deployments that have a large
  number of graphs.  Also, raised the default cache size from 32 MB to 256 MB.

* Reduced the volume of logging when Parliament is running in daemon mode.
  Log4j is now configured without a console logger, which means that the
  contents of the parliament.log file are not duplicated in the jsvc-log.txt
  file.  (When run at the command line, the logging configuration is unchanged,
  so you will still be able to see the log contents in real time in that case.)

* Numerous updates to bring in line with Java 11 & 17 (but still using Java 8)

* Several documentation improvements, including a new section detailing how to
  secure a Parliament instance.
