@@ -5,20 +5,22 @@ log/
 
 /build.properties
 /dependencies/
-/doc/UserGuide/missfont.log
-/doc/UserGuide/ParliamentUserGuide.acr
-/doc/UserGuide/ParliamentUserGuide.aux
-/doc/UserGuide/ParliamentUserGuide.bbl
-/doc/UserGuide/ParliamentUserGuide.bcf
-/doc/UserGuide/ParliamentUserGuide.blg
-/doc/UserGuide/ParliamentUserGuide.lof
-/doc/UserGuide/ParliamentUserGuide.log
-/doc/UserGuide/ParliamentUserGuide.lot
-/doc/UserGuide/ParliamentUserGuide.out
-/doc/UserGuide/ParliamentUserGuide.run.xml
-/doc/UserGuide/ParliamentUserGuide.synctex.gz
-/doc/UserGuide/ParliamentUserGuide.synctex(busy)
-/doc/UserGuide/ParliamentUserGuide.toc
+
+/doc/**/missfont.log
+/doc/**/*.acr
+/doc/**/*.aux
+/doc/**/*.bbl
+/doc/**/*.bcf
+/doc/**/*.blg
+/doc/**/*.lof
+/doc/**/*.log
+/doc/**/*.lot
+/doc/**/*.out
+/doc/**/*.run.xml
+/doc/**/*.synctex.gz
+/doc/**/*.synctex(busy)
+/doc/**/*.toc
+
 /jena/JosekiExtensions/src/com/bbn/parliament/jena/joseki/bridge/configuration/vocab/
 /jena/JenaGraph/*.log*
 *.log*
