@@ -29,7 +29,7 @@ You will need an appropriate C++ compiler for each operating system on which you
 		\midrule
 		Ubuntu 20 (64-bit) & GCC 9.3.0 & gcc \\
 		\midrule
-		RHEL/CentOS 8 (64-bit) & GCC 8.4.1 & gcc \\
+		RHEL 8 (64-bit) & GCC 8.4.1 & gcc \\
 		\bottomrule
 	\end{tabular}
 	\caption{Supported Platforms and Compilers}
@@ -218,7 +218,6 @@ where «platform» indicates the particular flavor of Linux you are using.  For 
 		\toprule
 		\emph{Platform}	& \emph{Description}\\
 		\headingrule
-		\path|centos8|		& CentOS Linux 8\\
 		\path|rhel8|		& Red Hat Enterprise Linux 8\\
 		\path|ubuntu20|	& Ubuntu Linux 20, LTS\\
 		\bottomrule
