@@ -6,13 +6,45 @@
 \chapter{Deploying and Using \acl{pmnt}}
 \label{chapter-deploying-and-using}
 
-There are several ways to use \ac{pmnt}.  By far the most common is as a server application that exposes a \ac{sparql} endpoint.  The binary distribution directly supports this usage, running \ac{pmnt} within the included Jetty servlet engine.  See Section~\ref{section-std-server-deploy} for complete instructions.
+There are several ways to use \ac{pmnt}.  By far the most common is as a server application that exposes a \ac{sparql} endpoint.  \acp{pmnt} Docker image and its more traditional binary distribution directly support this usage, running \ac{pmnt} within the included Jetty servlet engine.  See Sections~\ref{section-std-container-deploy} and~\ref{section-std-server-deploy} for instructions.
 
 \ac{pmnt} can also be used with other servlet engines such as Tomcat and Glassfish (see Section~\ref{section-parliament-with-jena-and-tomcat}) or as an in-process library (Section~\ref{section-parliament-in-process}).
 
 Pre-built binaries for common platforms are available on the \ac{pmnt} Web site\urlcite{http://parliament.semwebcentral.org/}.  You can also build \ac{pmnt} yourself (see Chapter~\ref{chapter-building-parliament}).
 
-This chapter starts with instructions for installing a \ac{pmnt} server (Section~\ref{section-std-server-deploy}), followed by a discussion of the \ac{pmnt} configuration file (Section~\ref{section-configuring-pmnt}).  Then comes a detailed discussion of each of the less common deployment scenarios.  The chapter concludes with a discussion of \ac{pmnt} utilities and troubleshooting (Sections~\ref{section-parliamentadmin-utility} and~\ref{section-troubleshooting}).
+This chapter starts with instructions for running a \ac{pmnt} container (Section~\ref{section-std-container-deploy}) and for installing a \ac{pmnt} server (Section~\ref{section-std-server-deploy}), followed by a discussion of the \ac{pmnt} configuration file (Section~\ref{section-configuring-pmnt}).  Then comes a detailed discussion of each of the less common deployment scenarios.  The chapter concludes with a discussion of \acp{pmnt} utilities and some troubleshooting hints (Sections~\ref{section-parliamentadmin-utility} and~\ref{section-troubleshooting}, respectively).
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Deploying a \ac{pmnt} Container}
+\label{section-std-container-deploy}
+
+\acp{pmnt} Docker image can be found on Docker Hub here:
+\begin{quote}
+\texttt{idemmons/parliament:«version»}
+\end{quote}
+
+Before deploying this image, create a directory for \acp{pmnt} data files.  A traditional choice on the local file system would be \path|/var/parliament-data| for Linux and Unix systems and \path|C:\ProgramData\parliament-data| on Windows.  A location on an external storage device might also be a good choice.  Whatever you choose, we will refer to this location as \texttt{«data-dir»}.
+
+To run the container, with options to mount the \texttt{«data-dir»} volume and map the port, use this command (with line breaks added for readability):
+\begin{verbatim}
+docker run -d -p 80:8089 --name=parliament-«version»
+   --mount type=volume,src=«data-dir»,dst=/var/parliament-data
+   idemmons/parliament:«version»
+\end{verbatim}
+
+Table~\ref{table-pmnt-container-connect-urls} lists \acp{pmnt} endpoints, as discussed in Section~\ref{section-std-server-usage}.
+\begin{table}[htbp]
+	\centering
+	\begin{tabular}{ll}
+		\acs*{http} interface: & \nolinkurl{http://«host»/parliament}\\
+		\ac{sparql} endpoint: & \nolinkurl{http://«host»/parliament/sparql}\\
+		Bulk loader: & \nolinkurl{http://«host»/parliament/bulk}\\
+	\end{tabular}
+	\caption{\acs*{pmnt} Container Connection \acsp*{url}}
+	\label{table-pmnt-container-connect-urls}
+\end{table}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Deploying a \ac{pmnt} Server}
@@ -29,7 +61,6 @@ Here \texttt{\textbf{\textit{x.y.z}}} is the \ac{pmnt} version number and \textt
 		\toprule
 		\emph{Platform}	& \emph{Description}				& \emph{Binaries}\\
 		\headingrule
-		\path|centos8|		& CentOS Linux 8					& 64-bit\\
 		\path|mac|			& Mac OS Catalina and newer	& 64-bit\\
 		\path|rhel8|		& Red Hat Enterprise Linux 8	& 64-bit\\
 		\path|ubuntu20|	& Ubuntu Linux 20, LTS			& 64-bit\\
@@ -120,7 +151,7 @@ If you change any of the parameters in \path|parliament.ps1| after installing as
 
 \subsubsection{Installing as a Linux Daemon}
 
-This section is focused on variants of Linux that support systemd, such as RHEL, CentOS, and Ubuntu.  For setup on non-systemd Linux, please use the next section.
+This section is focused on variants of Linux that support systemd, such as RHEL and Ubuntu.  For setup on non-systemd Linux, please use the next section.
 
 To install \ac{pmnt} as a systemd service, we begin by establishing a system account (and group) under which \ac{pmnt} will run.  To do this from scratch, use the following command:
 
