@@ -133,11 +133,10 @@
 \input{DeployingAndUsing.tex}
 \input{Building.tex}
 
+%\backmatter
 \appendix
 
 \input{Appendices.tex}
-
-\backmatter
 
 \acsetup{
 	list/name=Glossary,
