@@ -1,87 +1,0 @@
-* Set short query timeout
-* load deft data from dependencies/data
-* explore a bit
-* run a query:
-
-select distinct ?cls ?p ?value where {
-   values ?pred { owl:maxQualifiedCardinality owl:qualifiedCardinality }
-   ?cls rdfs:subClassOf ?r .
-   ?r a owl:Restriction ;
-      owl:onProperty ?p ;
-      ?pred ?value .
-} order by ?cls ?p
-
-prefix acore: <http://adept-kb.bbn.com/adept-core#>
-select distinct ?x ?xType ?xDirectType where {
-   ?x a acore:Role .
-   {
-      {
-         ?x a ?xType .
-      } union {
-         ?x par:directType ?xDirectType .
-      }
-   }
-} order by ?x ?xType ?xDirectType
-
-prefix acore: <http://adept-kb.bbn.com/adept-core#>
-select distinct ?super ?directSuper where {
-   {
-      acore:Divorce rdfs:subClassOf ?super .
-   } union {
-      acore:Divorce par:directSubClassOf ?directSuper .
-   }
-} order by ?super ?directSuper
-
-* run a long query, see it on the admin page, watch it time out:
-
-select distinct ?x1 ?y1 ?x2 ?y2 where {
-   ?x1 rdfs:subClassOf ?y1 .
-   ?x2 rdfs:subClassOf ?y2 .
-}
-
-* Attempt to insert a reserved predicate:
-   owl:Thing par:directType owl:Class .
-
-* export the entire repository as N-Triples
-* export the default graph as Turtle
-* shut down the server
-* run these commands:
-
-On Mac:
-
-cd kb-data/
-env DYLD_LIBRARY_PATH=../bin PARLIAMENT_LOG_CONFIG_PATH=../ParliamentLogConfig.txt PARLIAMENT_KB_CONFIG_PATH=../ParliamentKbConfig.txt ../bin/ParliamentAdmin -s
-env DYLD_LIBRARY_PATH=../bin PARLIAMENT_LOG_CONFIG_PATH=../ParliamentLogConfig.txt PARLIAMENT_KB_CONFIG_PATH=../ParliamentKbConfig.txt ../bin/ParliamentAdmin -t -e foo.nt
-
-On Linux:
-
-cd kb-data/
-env LD_LIBRARY_PATH=../bin PARLIAMENT_LOG_CONFIG_PATH=../ParliamentLogConfig.txt PARLIAMENT_KB_CONFIG_PATH=../ParliamentKbConfig.txt ../bin/ParliamentAdmin -s
-env LD_LIBRARY_PATH=../bin PARLIAMENT_LOG_CONFIG_PATH=../ParliamentLogConfig.txt PARLIAMENT_KB_CONFIG_PATH=../ParliamentKbConfig.txt ../bin/ParliamentAdmin -t -e foo.nt
-
-On Windows:
-
-cd kb-data
-set PARLIAMENT_LOG_CONFIG_PATH=..\ParliamentLogConfig.txt
-set PARLIAMENT_KB_CONFIG_PATH=..\ParliamentKbConfig.txt
-..\bin\ParliamentAdmin /s
-..\bin\ParliamentAdmin /t /e foo.nt
-
-* Install as service (Windows and Linux)
-* Start as service (Windows and Linux) or Daemon (Mac)
-* Run a query
-* Shut it down
-* Uninstall as service (Windows and Linux)
-
-
-
-
-
-
-
-
-
-
-
-
-env DYLD_LIBRARY_PATH=../bin PARLIAMENT_LOG_CONFIG_PATH=../ParliamentLogConfig.txt PARLIAMENT_KB_CONFIG_PATH=../ParliamentKbConfig.txt lldb -- ../bin/ParliamentAdmin -s
